tests/core/error/function-1.rq
# Use an ArgList in an ArgList, which we do not allow
SELECT (fn:replace (('foo', 'f'), 'b') AS ?m) { }
